@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Feb-2010 Hannes Papenberg
+# Partially fixed the login when site is offline
+
 05-Feb-2010 Mark Dexter
 ^ Improve documentation for SeleniumConfig sample file
 
